--- a/scss/utilities.boxing.scss
+++ b/scss/utilities.boxing.scss
@@ -1,5 +1,9 @@
 @import "mixins/utilities.boxing";
 
+.u-no-overflow {
+  @include no-overflow;
+}
+
 .u-letter-box--super {
   @include letter-box--super;
 }
